--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div id="unity-container" class="unity-desktop">
-      <canvas id="unity-canvas" width=720 height=720 tabindex="-1"></canvas>
+      <canvas id="unity-canvas" width=720 height=1080 tabindex="-1"></canvas>
       <div id="unity-loading-bar">
         <div id="unity-logo"></div>
         <div id="unity-progress-bar-empty">
@@ -55,9 +55,9 @@
       var loaderUrl = buildUrl + "/MemeSoundboard.loader.js";
       var config = {
         arguments: [],
-        dataUrl: buildUrl + "/MemeSoundboard.data.gz",
-        frameworkUrl: buildUrl + "/MemeSoundboard.framework.js.gz",
-        codeUrl: buildUrl + "/MemeSoundboard.wasm.gz",
+        dataUrl: buildUrl + "/MemeSoundboard.data",
+        frameworkUrl: buildUrl + "/MemeSoundboard.framework.js",
+        codeUrl: buildUrl + "/MemeSoundboard.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "Stranger Animation",
         productName: "Meme Soundboard",
@@ -99,7 +99,7 @@
       } else {
         // Desktop style: Render the game canvas in a window that can be maximized to fullscreen:
         canvas.style.width = "720px";
-        canvas.style.height = "720px";
+        canvas.style.height = "1080px";
       }
 
       document.querySelector("#unity-loading-bar").style.display = "block";
