--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         updateBannerVisibility();
       }
 
-      var buildUrl = "Build";
+      var buildUrl = "MemeSoundboard/Build";
       var loaderUrl = buildUrl + "/MemeSoundboard.loader.js";
       var config = {
         arguments: [],
