--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
   <meta charset="utf-8">
   <title>Meme Soundboard</title>
+  <link rel="icon" href="data:,">
   <style>
     body { margin:0; background: #222; display:flex; align-items:center; justify-content:center; height:100vh; }
-    canvas { background:#000; width:100%; height:100%; }
+    canvas { background:#000; width: 720px; height: 1080px; }
   </style>
 </head>
 <body>
