--- a/index.html
+++ b/index.html
@@ -4,9 +4,27 @@
   <meta charset="utf-8">
   <title>Meme Soundboard</title>
   <link rel="icon" href="data:,">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <style>
-    body { margin:0; background: #222; display:flex; align-items:center; justify-content:center; height:100vh; }
-    canvas { background:#000; width: 720px; height: 1080px; }
+    body {
+      margin: 0;
+      background: #222;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;   /* no scrolling */
+      overflow: hidden;
+    }
+
+    canvas {
+      background: #000;
+      /* Keep 720x1080 aspect ratio */
+      aspect-ratio: 1080 / 1280;
+      height: 100vh;        /* scale to fit height */
+      max-height: 100vh;
+      max-width: 100vw;
+      object-fit: contain;
+    }
   </style>
 </head>
 <body>
