--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
       object-fit: contain;
     }
   </style>
+
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6684792335433660"
+     crossorigin="anonymous"></script>
 </head>
 <body>
   <canvas id="unity-canvas"></canvas>
